--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-file-share",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "dev": "node --watch src/server.js"
   },
